z-index fix

--- a/frontend/src/app/pages/caretaker_phone/homephone/homephone.component.scss
+++ b/frontend/src/app/pages/caretaker_phone/homephone/homephone.component.scss
@@ -19,6 +19,7 @@
         background-color: #5356b6;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
+        z-index: 10;
     }
 
     #elder_name {
